Evolver: Migrate to SwitchPreferenceCompat
Change-Id: Ice9f732065e4792fc73b7890cdd6b9a55475f518

--- a/res/xml/app_lock_package_config_settings.xml
+++ b/res/xml/app_lock_package_config_settings.xml
@@ -25,13 +25,13 @@
         android:key="main_switch"
         android:title="@string/enable_protection" />
     
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="redact_notifications"
         android:title="@string/app_lock_notifications_title"
         android:summary="@string/app_lock_notifications_summary"
         android:dependency="main_switch" />
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="hide_from_launcher"
         android:title="@string/hide_from_launcher_title"
         android:summary="@string/hide_from_launcher_summary" />
