--- a/res/xml/evolution_settings_app_lock.xml
+++ b/res/xml/evolution_settings_app_lock.xml
@@ -23,7 +23,7 @@
         android:persistent="false"
         settings:controller="com.evolution.settings.security.applock.AppLockTimeoutPreferenceController" />
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="app_lock_biometrics_allowed"
         android:title="@string/app_lock_biometrics_allowed_title"
         android:persistent="false" />
