--- a/res/xml/evolution_settings_pulse.xml
+++ b/res/xml/evolution_settings_pulse.xml
@@ -8,17 +8,17 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/pulse_settings">
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="navbar_pulse_enabled"
         android:title="@string/show_navbar_pulse_title"
         android:summary="@string/show_navbar_pulse_summary" />
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="lockscreen_pulse_enabled"
         android:title="@string/show_lockscreen_pulse_title"
         android:summary="@string/show_lockscreen_pulse_summary" />
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="ambient_pulse_enabled"
         android:title="@string/show_ambient_pulse_title"
         android:summary="@string/show_ambient_pulse_summary" />
