--- a/res/xml/qs_header_image_settings.xml
+++ b/res/xml/qs_header_image_settings.xml
@@ -19,7 +19,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <SwitchPreference
+    <SwitchPreferenceCompat
         android:key="qs_header_image_enabled"
         android:title="@string/qs_header_image_enabled_title"
         android:summary="@string/qs_header_image_enabled_summary"
