Evolver: Adapt to A14 QPR2

--- a/res/xml/evolution_settings_about.xml
+++ b/res/xml/evolution_settings_about.xml
@@ -51,7 +51,7 @@
             android:summary="@string/evolution_telegram_summary">
             <intent
                 android:action="android.intent.action.VIEW"
-                android:data="https://t.me/EvolutionXOfficialROM" />
+                android:data="https://t.me/EvolutionX" />
         </Preference>
 
         <Preference
@@ -82,7 +82,7 @@
             android:summary="@string/evolution_about_founder_1_summary">
             <intent
                 android:action="android.intent.action.VIEW"
-                android:data="https://linktr.ee/shaazice" />
+                android:data="https://linktr.ee/joeyhuab" />
         </Preference>
 
         <Preference
