--- a/res/xml/evolution_settings_lockscreen.xml
+++ b/res/xml/evolution_settings_lockscreen.xml
@@ -21,6 +21,7 @@
 
     </PreferenceCategory>
 
+    <!--
     <PreferenceCategory
         android:key="ambient_display"
         android:title="@string/ambient_display_category">
@@ -29,7 +30,7 @@
             android:key="pulse_on_new_tracks"
             android:title="@string/pulse_on_new_tracks_title"
             android:summary="@string/pulse_on_new_tracks_summary"
-            android:defaultValue="true" />
+            android:defaultValue="false" />
 
         <com.evolution.settings.preference.SecureSettingPrimarySwitchPreference
             android:key="pulse_ambient_light"
@@ -42,6 +43,7 @@
             settings:requiresConfig="@bool/config_show_ambient_edge_light" />
 
     </PreferenceCategory>
+    -->
 
     <PreferenceCategory
         android:title="@string/lockscreen_clock_category">
@@ -102,11 +104,13 @@
             android:title="@string/always_on_display_schedule_title"
             android:fragment="com.evolution.settings.fragments.AODSchedule" />
 
+        <!--
         <com.evolution.settings.preference.SystemSettingSwitchPreference
             android:key="lockscreen_hide_status_bar"
             android:title="@string/hide_lockscreen_status_bar_title"
             android:summary="@string/hide_lockscreen_status_bar_summary"
             android:defaultValue="false" />
+        -->
 
     </PreferenceCategory>
 
@@ -120,6 +124,7 @@
             android:summary="@string/media_art_summary"
             android:defaultValue="true" />
 
+        <!--
         <com.evolution.settings.preference.SystemSettingSeekBarPreference
             android:key="lockscreen_media_blur"
             android:title="@string/lockscreen_media_blur_title"
@@ -130,7 +135,6 @@
             settings:interval="5"
             android:defaultValue="100" />
 
-        <!--
         <com.evolution.settings.preference.SystemSettingListPreference
             android:key="lockscreen_albumart_filter"
             android:title="@string/lockscreen_albumart_filter_title"
@@ -168,6 +172,7 @@
             android:summary="@string/enable_fingerprint_ripple_effect_summary"
             android:defaultValue="true" />
 
+        <!--
         <com.evolution.settings.preference.SystemSettingSwitchPreference
             android:key="fp_success_vibrate"
             android:title="@string/fp_success_vibrate_title"
@@ -179,6 +184,7 @@
             android:title="@string/fp_error_vibrate_title"
             android:summary="@string/fp_error_vibrate_summary"
             android:defaultValue="true" />
+        -->
 
     </PreferenceCategory>
 
